--- a/Blitz_framework/LESS/blitz-lite.less
+++ b/Blitz_framework/LESS/blitz-lite.less
@@ -7,14 +7,13 @@
   License: MIT (https://opensource.org/licenses/MIT)
 */
 
-
 /* NAMESPACES */
 
-@namespace h "http://www.w3.org/1999/xhtml/";
-@namespace epub "http://www.idpf.org/2007/ops";
+@namespace h 'http://www.w3.org/1999/xhtml/';
+@namespace epub 'http://www.idpf.org/2007/ops';
 
 html {
-/* */        
+   /* */
 }
 
 // Reference > won’t be output, utils can be imported as reference if you want
@@ -32,6 +31,7 @@ html {
 @import 'core/rhythm';
 @import 'core/features';
 @import 'core/kindle-queries';
+@import 'core/custom';
 
 // Base is the foundation = styles you'll use in every book
 @import 'base/reset';
