--- a/Blitz_framework/CSS/AltStylesheets/blitz.uncommented.css
+++ b/Blitz_framework/CSS/AltStylesheets/blitz.uncommented.css
@@ -5,10 +5,19 @@
   Codename: Cool Under Heat
   License: MIT (https://opensource.org/licenses/MIT)
 */
-@namespace h "http://www.w3.org/1999/xhtml/";
-@namespace epub "http://www.idpf.org/2007/ops";
-@namespace m "http://www.w3.org/1998/Math/MathML/";
-@namespace svg "http://www.w3.org/2000/svg";
+@namespace h 'http://www.w3.org/1999/xhtml/';
+@namespace epub 'http://www.idpf.org/2007/ops';
+@namespace m 'http://www.w3.org/1998/Math/MathML/';
+@namespace svg 'http://www.w3.org/2000/svg';
+.bg-white {
+  background-color: #fff
+}
+.max-w-lg {
+  max-width: 512px
+}
+.max-w-xl {
+  max-width: 576px
+}
 address,
 article,
 aside,
@@ -58,6 +67,7 @@ nav,
 section {
   display: block
 }
+.hidden,
 [hidden] {
   display: none
 }
@@ -475,8 +485,7 @@ hr.asterism {
   height: 1.5em;
   text-indent: 0;
   text-align: center;
-  background: transparent url(../../Images/asterism.svg) no-repeat center;
-  background-size: 2.5em 1.25em;
+  background: transparent url(../../assets/images/asterism.png) no-repeat center;
   overflow: hidden;
   opacity: .7
 }
