--- a/Blitz_framework/LESS/blitz.less
+++ b/Blitz_framework/LESS/blitz.less
@@ -7,16 +7,15 @@
   License: MIT (https://opensource.org/licenses/MIT)
 */
 
-
 /* NAMESPACES */
 
-@namespace h "http://www.w3.org/1999/xhtml/";
-@namespace epub "http://www.idpf.org/2007/ops";       /* if you need to style epub:type */
-@namespace m "http://www.w3.org/1998/Math/MathML/";   /* if you need to style MathML */
-@namespace svg "http://www.w3.org/2000/svg";          /* if you need to style SVG */
+@namespace h 'http://www.w3.org/1999/xhtml/';
+@namespace epub 'http://www.idpf.org/2007/ops'; /* if you need to style epub:type */
+@namespace m 'http://www.w3.org/1998/Math/MathML/'; /* if you need to style MathML */
+@namespace svg 'http://www.w3.org/2000/svg'; /* if you need to style SVG */
 
 html {
-/* Don't use it for styling, used as selector which can take a punch if anything goes wrong above */        
+   /* Don't use it for styling, used as selector which can take a punch if anything goes wrong above */
 }
 
 /* Begin CSS */
@@ -34,6 +33,7 @@ html {
 @import 'core/rhythm';
 @import 'core/features';
 @import 'core/kindle-queries';
+@import 'core/custom';
 
 // Base is the foundation = styles you'll use in every book
 @import 'base/reset';
