--- a/Blitz_template/Blitz_epub3/OEBPS/assets/blitz.css
+++ b/Blitz_template/Blitz_epub3/OEBPS/assets/blitz.css
@@ -6,25 +6,34 @@
   License: MIT (https://opensource.org/licenses/MIT)
 */
 /* NAMESPACES */
-@namespace h "http://www.w3.org/1999/xhtml/";
-@namespace epub "http://www.idpf.org/2007/ops";
+@namespace h 'http://www.w3.org/1999/xhtml/';
+@namespace epub 'http://www.idpf.org/2007/ops';
 /* if you need to style epub:type */
-@namespace m "http://www.w3.org/1998/Math/MathML/";
+@namespace m 'http://www.w3.org/1998/Math/MathML/';
 /* if you need to style MathML */
-@namespace svg "http://www.w3.org/2000/svg";
+@namespace svg 'http://www.w3.org/2000/svg';
 /* if you need to style SVG */
 html {
   /* Don't use it for styling, used as selector which can take a punch if anything goes wrong above */
 }
 /* Begin CSS */
+.bg-white {
+  background-color: #fff;
+}
+.max-w-lg {
+  max-width: 512px;
+}
+.max-w-xl {
+  max-width: 576px;
+}
 /* RESET */
-/* So here's the trick, we must reset to manage a number of problems once and for all: 
-- HTML5 backwards compatibility (EPUB 3 file in EPUB 2 app); 
-- user settings (e.g. line-height on Kobo and Kindle); 
-- CSS bloat (DRY); 
-- KFX for which a reset using `border: 0` seems to disable support; 
+/* So here's the trick, we must reset to manage a number of problems once and for all:
+- HTML5 backwards compatibility (EPUB 3 file in EPUB 2 app);
+- user settings (e.g. line-height on Kobo and Kindle);
+- CSS bloat (DRY);
+- KFX for which a reset using `border: 0` seems to disable support;
 - etc.
-It all started as a normalize and became a reset given the magnitude of the task.                                                          
+It all started as a normalize and became a reset given the magnitude of the task.
 */
 article,
 address,
@@ -79,6 +88,7 @@ nav,
 section {
   display: block;
 }
+.hidden,
 [hidden] {
   display: none;
 }
@@ -94,7 +104,7 @@ pre {
   text-align: left;
 }
 /* Following EPUB 3 spec by the letter (applies to RS but let’s make sure it is respected because we never know) */
-nav[epub|type~="toc"] ol {
+nav[epub|type~='toc'] ol {
   list-style: none !important;
 }
 /* Kindle does not follow the EPUB 3 spec. */
@@ -104,8 +114,8 @@ nav[epub|type~="toc"] ol {
   }
 }
 /* [Opinionated] Default to prevent bloat in case linear="no" is rendered as linear="yes" */
-nav[epub|type~="landmarks"],
-nav[epub|type~="page-list"] {
+nav[epub|type~='landmarks'],
+nav[epub|type~='page-list'] {
   display: none;
 }
 a,
@@ -554,8 +564,8 @@ hr.transition {
   background: none;
   /* Note: overridden in night mode excepted when using linear-gradient */
 }
-/* Over-engineered asterism with an SVG background 
-which is legacy RMSDK-compliant, reflows with text and 
+/* Over-engineered asterism with an SVG background
+which is legacy RMSDK-compliant, reflows with text and
 is night-mode compatible (black asterisk + white border) */
 hr.asterism {
   width: auto;
@@ -564,14 +574,9 @@ hr.asterism {
   height: 1.5em;
   text-indent: 0;
   text-align: center;
-  background: transparent url("../Images/asterism.svg") no-repeat center;
-  /* Change url if you put asterism in a folder */
-  background-size: 2.5em 1.25em;
-  /* RMSDK doesn't support -> won't scale but SVG viewport is OK for a wide range of font-sizes */
+  background: transparent url('../assets/images/asterism.png') no-repeat center;
   overflow: hidden;
-  /* Fixes legacy RMSDK bug when contents before hr are invisible */
   opacity: 0.7;
-  /* Better border color match in night mode (less disruptive) */
 }
 /* TABLES */
 table {
