--- a/Blitz_template/Blitz_epub3/OEBPS/templates/00-epigraph.xhtml
+++ b/Blitz_template/Blitz_epub3/OEBPS/templates/00-epigraph.xhtml
@@ -3,14 +3,14 @@
 
 <html xmlns:epub="http://www.idpf.org/2007/ops" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <title>Blitz</title>
-  <link href="../Styles/blitz.css" type="text/css" rel="stylesheet"/>
+   <meta charset="utf-8" />
+   <title>Blitz</title>
+   <link href="../assets/blitz.css" type="text/css" rel="stylesheet" />
 </head>
 
 <body xml:lang="en" lang="en" epub:type="frontmatter">
-    <blockquote epub:type="epigraph" role="doc-epigraph" id="epigraph">
+   <blockquote epub:type="epigraph" role="doc-epigraph" id="epigraph">
       <p>I beg of you, do not disturb this. <cite>Archimedes</cite></p>
-    </blockquote>
+   </blockquote>
 </body>
 </html>
